--- a/public/component/main/main.css
+++ b/public/component/main/main.css
@@ -1,20 +1,3 @@
-* {
-  font-family: monospace;
-  color: white;
-}
-*::-webkit-scrollbar {
-  width: 5px;
-}
-*::-webkit-scrollbar-track {
-  border-radius: 1000px 0 0 1000px;
-  margin-block: 10px;
-  background-color: #353541;
-}
-*::-webkit-scrollbar-thumb {
-  background-color: #0c0c0f;
-  border-radius: 1000px 0 0 1000px;
-}
-
 body {
   margin: 0;
   background-color: #16161b;
@@ -99,8 +82,8 @@ section {
   height: calc(100dvh - 115.5px - 4px);
   bottom: 100dvh;
   width: 100%;
-  border-top: 2px solid #16161b;
-  border-bottom: 2px solid #16161b;
+  border-top: 1px solid #515161;
+  border-bottom: 1px solid #515161;
   transition: bottom 1s ease;
   transition-delay: 0.2s;
 }
@@ -152,6 +135,9 @@ section {
   padding-block: 50px;
   margin-top: 0 !important;
 }
+.form > div:nth-child(3) {
+  margin-top: 10px;
+}
 .form input, .form textarea {
   font-size: 14px;
 }
@@ -159,7 +145,8 @@ section {
   cursor: pointer;
   font-size: 14px;
   background-color: transparent;
-  border: 1px solid white;
+  border: 1px solid #515161;
+  border-radius: 3px;
   padding-block: 3px;
   color: white;
   transition: all 0.3s ease;
@@ -174,10 +161,10 @@ section {
 .form div button:hover #openLink {
   color: #16161b;
 }
-.form input {
-  padding-bottom: 10px;
+.form > input {
+  padding-bottom: 5px;
 }
-.form label {
+.form > label {
   width: fit-content;
   margin-top: 8px;
   font-size: 30px;
@@ -190,15 +177,15 @@ section {
   pointer-events: none;
   user-select: none;
 }
-.form label .counter {
+.form > label .counter {
   color: white;
   font-size: 12px;
 }
-.form input, .form textarea {
+.form > input, .form > textarea {
   height: auto;
   background-color: transparent;
   border: none;
-  border-bottom: 2px solid white;
+  border-bottom: 1px solid white;
   color: white;
   transition: all 0.3s ease;
   margin-top: 20px;
@@ -267,4 +254,155 @@ section {
 }
 .link #edit {
   display: none;
+}
+
+.picture-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.picture-preview {
+  overflow-x: auto;
+  overflow-y: hidden;
+  display: flex;
+  align-items: center;
+  padding-bottom: 5px;
+  transition: height 0.5s ease, paddingBottom 0.3s ease;
+}
+.picture-container {
+  width: fit-content;
+  display: flex;
+  gap: 10px;
+  backdrop-filter: blur(0px);
+}
+.picture-container > * {
+  height: 100px;
+  width: 100px;
+  position: relative;
+  border-radius: 10px;
+  border: 2px solid white;
+  overflow: hidden;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.picture {
+  pointer-events: none;
+}
+
+.picture:hover .delete-picture {
+  opacity: 1;
+}
+.delete-picture {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  opacity: 0;
+  height: 20px;
+  width: 20px;
+  background-color: red;
+  border-radius: 1000px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease;
+}
+.delete-picture img {
+  pointer-events: none;
+}
+
+.picture > .picture-content > img {
+  width: inherit;
+  pointer-events: none;
+}
+
+.picture-nav {
+  display: none;
+}
+.picture-back {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  font-size: 18px;
+  cursor: pointer;
+  pointer-events: all;
+}
+.picture-content {
+  width: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  pointer-events: all;
+}
+.picture-comment {
+  display: none;
+}
+.picture-nav, .picture-comment {
+  align-items: center;
+  padding-inline: 50px;
+}
+
+.picture-comment {
+  align-items: unset;
+  justify-content: center;
+  flex-direction: column-reverse;
+}
+.picture-comment > input {
+  border: none;
+  background-color: transparent;
+  border-bottom: 1px solid white;
+  pointer-events: all;
+}
+.picture-comment > input:focus ~ label, .picture-comment > input:not(:placeholder-shown) ~ label {
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+
+.picture-comment > label {
+  margin-bottom: -18px;
+  transition: all 0.3s cubic-bezier(1, -0.5, 0.1, 1.5);
+}
+
+.picture-upload {
+  display: flex;
+  justify-content: flex-end;
+}
+.picture-upload img {
+  cursor: pointer;
+}
+
+.picture-arrow {
+  height: 100dvh;
+  width: 100dvw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  opacity: 0;
+  z-index: 21;
+  transition: opacity 2s ease;
+}
+.picture-arrow > * {
+  position: absolute;
+  height: 100dvh;
+  width: fit-content;
+  padding-inline: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  pointer-events: none;
+}
+.picture-arrow > * > * {
+  height: 25px;
+}
+.arrowr {
+  /* opacity: 0; */
+  right: 0;
+}
+.arrowl {
+  /* opacity: 0; */
+  left: 0;
 }
