--- a/public/src/css/new.css
+++ b/public/src/css/new.css
@@ -4,14 +4,19 @@
 }
 *::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
 *::-webkit-scrollbar-track {
-  border-radius: 1000px 0 0 1000px;
-  margin-block: 10px;
+  margin: 10px;
   background-color: #353541;
 }
 *::-webkit-scrollbar-thumb {
-  background-color: #0c0c0f;
+  background-color: rgb(212, 30, 30);
+}
+*::-webkit-scrollbar-track:horizontal, *::-webkit-scrollbar-thumb:horizontal {
+  border-radius: 1000px 1000px 0 0;
+}
+*::-webkit-scrollbar-track:vertical, *::-webkit-scrollbar-thumb:vertical {
   border-radius: 1000px 0 0 1000px;
 }
 
@@ -30,23 +35,29 @@ section {
 }
 
 .acc-container {
+  height: 80px;
   width: 100% !important;
   display: flex;
   justify-content: end !important;
 }
 #signin {
   background-color: transparent;
-  border: 2px solid white;
-  padding: 3px 10px;
+  border: 2px solid #515161;
+  border-radius: 5px;
+  padding: 3px 15px;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 #signin:hover {
   background-color: #fff;
+  border-color: white;
   color: #16161b;
 }
 
 .main {
+  height: 100dvh;
+  overflow-x: hidden;
+  overflow-y: auto;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -54,7 +65,8 @@ section {
 }
 
 .container {
-  width: 50%;
+  overflow-y: auto;
+  width: 100%;
   min-height: 100dvh;
   display: flex;
   justify-content: center;
@@ -81,6 +93,7 @@ section {
 
   .main {
     order: 1;
+    height: unset;
   }
   .dummy {
     order: 2;
