--- a/public/components/share-part/share.css
+++ b/public/components/share-part/share.css
@@ -81,9 +81,15 @@ div[message-id] {
   right: 0;
 }
 .share-head #back {
-  background-color: red;
+  height: 20px;
+  aspect-ratio: 1 / 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(212, 30, 30);
   color: white;
-  padding: 5px 8px;
+  padding: 5px;
+  font-size: 14px;
   border-radius: 3px;
   cursor: pointer;
 }
