--- a/public/src/css/new.css
+++ b/public/src/css/new.css
@@ -2,21 +2,28 @@
   font-family: monospace;
   color: white;
 }
+
 *::-webkit-scrollbar {
   width: 5px;
   height: 5px;
 }
+
 *::-webkit-scrollbar-track {
   margin: 10px;
   background-color: #353541;
 }
+
 *::-webkit-scrollbar-thumb {
   background-color: rgb(212, 30, 30);
 }
-*::-webkit-scrollbar-track:horizontal, *::-webkit-scrollbar-thumb:horizontal {
+
+*::-webkit-scrollbar-track:horizontal,
+*::-webkit-scrollbar-thumb:horizontal {
   border-radius: 1000px 1000px 0 0;
 }
-*::-webkit-scrollbar-track:vertical, *::-webkit-scrollbar-thumb:vertical {
+
+*::-webkit-scrollbar-track:vertical,
+*::-webkit-scrollbar-thumb:vertical {
   border-radius: 1000px 0 0 1000px;
 }
 
@@ -40,6 +47,7 @@ section {
   display: flex;
   justify-content: end !important;
 }
+
 #signin {
   background-color: transparent;
   border: 2px solid #515161;
@@ -48,6 +56,7 @@ section {
   cursor: pointer;
   transition: all 0.3s ease;
 }
+
 #signin:hover {
   background-color: #fff;
   border-color: white;
@@ -85,6 +94,15 @@ section {
   transition: all 0.3s ease;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-text-fill-color: #fff !important;
+  -webkit-box-shadow: 0 0 0 30px #16161b inset !important;
+}
+
 @media screen and (max-width: 540px) {
   section {
     grid-template-columns: none !important;
@@ -95,6 +113,7 @@ section {
     order: 1;
     height: unset;
   }
+
   .dummy {
     order: 2;
   }
